# 工程设置
PROJECT(jfd)
SET(version 2.0.0)
SET(soversion 2.0)

# CMake最低版本要求
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)
IF(COMMAND CMAKE_POLICY)
    CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.sipesc)

#关闭qDebug
#ADD_DEFINITIONS(-DQT_NO_DEBUG_OUTPUT)
#关闭Q_ASSERT
#ADD_DEFINITIONS(-DQT_NO_DEBUG)
#关闭多种分析方式
#ADD_DEFINITIONS(-DMULTIPLE_ANALYSIS)

#ADD_SUBDIRECTORY(scriptassist)
ADD_SUBDIRECTORY(hexafor12)
ADD_SUBDIRECTORY(jfddataimportor)
ADD_SUBDIRECTORY(main)
